# EveInvoice

./: .gitignore  README.md  essais.ipynb  hololeak.ipynb  pyproject.toml  sde.ipynb
src/eve_invoice/: __init__.py  bom.py  esi.py  fsd.py  hololeak.py  load.py  sde.py  utils.py
tests/: test_fsd.py  test_hololeak.py  test_sde.py  test_utils.py
